# Telemelya

./: .env.example  .gitignore  Caddyfile  Dockerfile  LICENSE  Makefile  README.md  docker-compose.local.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: docker-server.yml
docs/: TESTING_GUIDE.md  connectingTelemelya.md
examples/: bot-tests.yml
examples/echo_bot/: Dockerfile  bot.py
examples/echo_bot_tests/: .env.example  README.md  environment.py  requirements.txt  test_echo_bot.py
examples/echo_bot_tests/features/: echo_bot.feature
examples/echo_bot_tests/steps/: bot_steps.py
telemelya/: __init__.py  aiogram.py  models.py
telemelya/client/: __init__.py  client.py  collector.py
telemelya/server/: app.py  auth.py  bot_api.py  config.py  control_api.py  media.py  state.py  webhook.py
telemelya/tests/: conftest.py  test_auth.py  test_bot_api.py  test_edge_cases.py  test_health.py  test_media.py  test_send_update.py  test_sessions.py  test_webhook.py
telemelya/tests/steps/: common_steps.py  media_steps.py
tests/: environment.py  test_integration.py
tests/features/: photo_handling.feature  start_command.feature
tests/steps/: messaging_steps.py
