[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "telemelya"
version = "0.1.0"
description = "Mock Telegram Bot API for BDD testing"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "FedotTech"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "redis[hiredis]>=5.0.0",
    "aiobotocore>=2.12.0",
    "pydantic-settings>=2.2.0",
    "aiohttp>=3.9.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
aiogram = [
    "aiogram>=3.4.0",
    "aiohttp-socks>=0.8.0",
]
client = [
    "httpx>=0.27.0",
    "behave>=1.2.6",
    "Pillow>=10.0.0",
]
dev = [
    "httpx>=0.27.0",
    "behave>=1.2.6",
    "Pillow>=10.0.0",
    "pytest>=8.0.0",
    "allure-behave>=2.13.0",
]

[project.scripts]
telemelya-server = "telemelya.server.app:main"

[tool.setuptools.packages.find]
include = ["telemelya*"]

[tool.behave]
paths = ["tests/features"]
